[tool.poetry]
name = "hw-19-1"
version = "0.1.0"
description = ""
authors = ["Alina Salakhova <alina.salakhova1991@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
